--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required>
+						<input type="text" name="Nom" id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label>
