--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" alt="Agence La Panthère, agence web paris, création logo paris" >
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h1 class="text-center hero-bloc-text tc-orange">
 					Agence La Panthère
 				</h1>
 				<div class="text-center">
