--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="font-size20px">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visible sur internet</p>
+				<p class="font-size20px">L'agence La Panthère est une agence de web design qui aide <br> entreprises à devenir attractives et visible sur internet</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
